Fix subscription page scrolling issue

--- a/PlatGame/PlatuGamez/Views/Home/Subscribe.cshtml
+++ b/PlatGame/PlatuGamez/Views/Home/Subscribe.cshtml
@@ -1007,10 +1007,11 @@
         /* Top right text */
         .top-right {
             position: absolute;
-            top: 8px;
+            top: 22px;
             right: 16px;
             color: white;
             font-weight: bold;
+            /*font-size:12px;*/
         }
     </style>
 </head>
@@ -1055,10 +1056,10 @@
                 <a id="" href="#" class="button-propeties buttonx2 none">JOIN NOW</a>
                 <div class="main-form sub-section">
                     <div class="banner-img">
-                        <amp-img src="~/Content/images/PlatGames_Logo.png" width="462" height="525" class="large-imgx show" layout="responsive"></amp-img>
+                        <img src="~/Content/images/PlatGames_logo.png" width="462" height="525" class="large-imgx show" layout="responsive">
                     </div>
                     <div class="sub-form">
-                        <h2 class="sub-tagline centerx show"><br><b>Please choose your operator&nbsp;!</b></h2>                      
+                        <h2 class="sub-tagline centerx show"><br><b>Please choose your operator&nbsp;!</b></h2>
 
                         <div class="telco-opt-container">
                             <amp-selector class="select" layout="container" name="telco-option">
@@ -1084,20 +1085,20 @@
             </div>
             <!--<div class="tnc-container">
                 <div class="col--12 centerx">-->
-                    <!-- Please don't change amp-accordion tag, this will make TnC accordion not work -->
-                    <!--<div>
-                        <section>-->
-                            <!-- Accordion Header -->
-                            <!--<div class="tnc-title centerx show"><b><i><u>Free for 24 hours for Etisalat only and then 10 ADE Weely</u></i></b>&nbsp;</div>
-                            <div class="tnc-content centerx none"><p>This is a premium rate subscription service. You will receive 14 messages every week at 0.2 $per message. To unsubscribe SMS STOP to 21786 or dial 100# or 200#. For help please call 0703065013 or mailcustomercare@yourdomain.com.</p></div>-->
-
-                            <!-- End Accordion Content -->
-                        <!--</section>
-                        </amp-accordion>-->
-                        <!-- end AMP Accordion Tag -->
-                    <!--</div>
+            <!-- Please don't change amp-accordion tag, this will make TnC accordion not work -->
+            <!--<div>
+                <section>-->
+            <!-- Accordion Header -->
+            <!--<div class="tnc-title centerx show"><b><i><u>Free for 24 hours for Etisalat only and then 10 ADE Weely</u></i></b>&nbsp;</div>
+            <div class="tnc-content centerx none"><p>This is a premium rate subscription service. You will receive 14 messages every week at 0.2 $per message. To unsubscribe SMS STOP to 21786 or dial 100# or 200#. For help please call 0703065013 or mailcustomercare@yourdomain.com.</p></div>-->
+            <!-- End Accordion Content -->
+            <!--</section>
+            </amp-accordion>-->
+            <!-- end AMP Accordion Tag -->
+            <!--</div>
                 </div>
             </div>-->
         </div>
+    </div>
 </body>
 </html>
