Fixed the owl-carausel issue

--- a/PlatGame/PlatuGamez/Views/Home/Index.cshtml
+++ b/PlatGame/PlatuGamez/Views/Home/Index.cshtml
@@ -22,9 +22,9 @@
 
                     @foreach (var game in Model)
                     {
-                        <div class="owl-item cloned" style="width: 270px; margin-right: 10px;">
+                        <div class="owl-item" style="width: 270px; margin-right: 10px;">
                             <div class="card featured-games-card">
-                                <a href="@Url.Action("GameDetail", "Home",new { gameId=game.GameID,categoryName=game.CategoryName})"><img src="@game.GameLogo" class="card-img-top" alt="Game logo"></a>
+                                <a href="@Url.Action("GameDetail", "Home",new { gameId=game.GameID,categoryName=game.CategoryName})"><img src="@game.GameLogo" class="card-img-top" alt="Game logo" style="height:270px;"></a>
                                 <div class="card-body">
                                     @*<h4 class="card-title text-truncate">@game.GameTitle</h4>*@
                                     <h4 class="card-title text-truncate"><a href="@Url.Action("GameDetail", "Home",new { gameId=game.GameID,categoryName=game.CategoryName})">@game.GameTitle</a></h4>
@@ -151,6 +151,9 @@
             margin: 10,
             nav: false,
             dots: false,
+            autoplay: true,
+            autoplayTimeout: 3000,
+            autoplayHoverPause: true,
             responsive: {
                 0: { stagePadding: 20, items: 3, center: true },
                 576: { items: 3 },
