--- a/PlatGame/PlatuGamez/Views/Home/Index.cshtml
+++ b/PlatGame/PlatuGamez/Views/Home/Index.cshtml
@@ -5,6 +5,14 @@
     ViewBag.Title1 = "no ads, no waiting,";
     ViewBag.Title2 = "just pure play.";
 }
+
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZTHGRV"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <!-- Content -->
 
 
@@ -112,10 +120,10 @@
                 </div>
                 <h2 class="weekly text-center text-sm-left">
                     <span class="free-days ml-n3">Unlimited gaming, all levels included</span>
-                    <span class="discounts">
-                        <strong class="font-weight-bold">RM 2/Week </strong>
-                        <em class="text-danger"><del>RM 4/Week</del></em>
-                    </span>
+                    @*<span class="discounts">
+                            <strong class="font-weight-bold">RM 2/Week </strong>
+                            <em class="text-danger"><del>RM 4/Week</del></em>
+                        </span>*@
                 </h2>
                 <ul class="subscription-features">
                     <li>Hundreds of top games</li>
