--- a/PlatGame/PlatuGamez/Views/Home/AllGames.cshtml
+++ b/PlatGame/PlatuGamez/Views/Home/AllGames.cshtml
@@ -9,6 +9,13 @@
     var categories = (ICollection<ForestInterActive.CategoryAndGamesModel>)ViewBag.Category;
 }
 
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZTHGRV"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <!-- Content -->
 
 @foreach (var category in categories)
