--- a/PlatGame/PlatuGamez/Views/Shared/_Layout.cshtml
+++ b/PlatGame/PlatuGamez/Views/Shared/_Layout.cshtml
@@ -7,6 +7,20 @@
     <meta name="HandheldFriendly" content="true">
     <title>Plat Games</title>
 
+
+    @* GTM *@
+    <!-- Google Tag Manager -->
+    <script>
+    (function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-KZTHGRV');</script>
+    <!-- End Google Tag Manager -->
+
     @* ------ FAVICON *@
     <link rel="apple-touch-icon" sizes="180x180" href="~/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="~/img/favicon-32x32.png">
@@ -57,17 +71,15 @@
             color: white;
         }
 
-        .modal-header{
-            background-color:chocolate;
-            color:white;
+        .modal-header {
+            background-color: chocolate;
+            color: white;
         }
 
-        .modal-body{
-            background-color:white;
-            color:black;
+        .modal-body {
+            background-color: white;
+            color: black;
         }
-      
-
     </style>
 
 </head>
